load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "http",
    srcs = ["http.go"],
    importpath = "github.com/thanos-io/thanos/pkg/http",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/discovery/cache",
        "@com_github_go_kit_kit//log",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//version",
        "@com_github_prometheus_prometheus//discovery/file",
        "@com_github_prometheus_prometheus//discovery/targetgroup",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
