load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "logging",
    srcs = [
        "grpc.go",
        "http.go",
        "logger.go",
        "options.go",
        "yaml_parser.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/logging",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/server/http",
        "@com_github_efficientgo_tools_extkingpin//:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/logging:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/tags:go_default_library",
        "@com_github_oklog_ulid//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "logging_test",
    srcs = ["http_test.go"],
    embed = [":logging"],
    deps = [
        "//pkg/testutil",
        "@com_github_go_kit_kit//log:go_default_library",
    ],
)
