load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "logging",
    srcs = [
        "grpc.go",
        "http.go",
        "logger.go",
        "options.go",
        "yaml_parser.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/logging",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/server/http",
        "@com_github_efficientgo_tools_extkingpin//:extkingpin",
        "@com_github_go_kit_kit//log",
        "@com_github_go_kit_kit//log/level",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/logging",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/tags",
        "@com_github_oklog_ulid//:ulid",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "logging_test",
    srcs = ["http_test.go"],
    embed = [":logging"],
    deps = [
        "//pkg/testutil",
        "@com_github_go_kit_kit//log",
    ],
)
