load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "metadata",
    srcs = [
        "metadata.go",
        "prometheus.go",
        "proxy.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/metadata",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/metadata/metadatapb",
        "//pkg/promclient",
        "//pkg/store/storepb",
        "//pkg/tracing",
        "@com_github_go_kit_kit//log",
        "@com_github_go_kit_kit//log/level",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_prometheus//storage",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "metadata_test",
    srcs = ["prometheus_test.go"],
    embed = [":metadata"],
    deps = [
        "//pkg/metadata/metadatapb",
        "//pkg/promclient",
        "//pkg/runutil",
        "//pkg/testutil",
        "//pkg/testutil/e2eutil",
        "@com_github_go_kit_kit//log",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_prometheus//storage",
    ],
)
