load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "model",
    srcs = [
        "timeduration.go",
        "units.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/model",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_alecthomas_units//:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_prometheus//pkg/timestamp:go_default_library",
        "@in_gopkg_alecthomas_kingpin_v2//:go_default_library",
    ],
)

go_test(
    name = "model_test",
    srcs = [
        "timeduration_test.go",
        "units_test.go",
    ],
    embed = [":model"],
    deps = [
        "//pkg/testutil",
        "@com_github_prometheus_prometheus//pkg/timestamp:go_default_library",
        "@in_gopkg_alecthomas_kingpin_v2//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
