load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "promclient",
    srcs = ["promclient.go"],
    importpath = "github.com/thanos-io/thanos/pkg/promclient",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/exemplars/exemplarspb",
        "//pkg/metadata/metadatapb",
        "//pkg/rules/rulespb",
        "//pkg/runutil",
        "//pkg/store/storepb",
        "//pkg/targets/targetspb",
        "//pkg/tracing",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_gogo_status//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_prometheus//config:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//pkg/timestamp:go_default_library",
        "@com_github_prometheus_prometheus//promql:go_default_library",
        "@com_github_prometheus_prometheus//promql/parser:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)

go_test(
    name = "promclient_test",
    srcs = ["promclient_e2e_test.go"],
    embed = [":promclient"],
    deps = [
        "//pkg/block/metadata",
        "//pkg/runutil",
        "//pkg/testutil",
        "//pkg/testutil/e2eutil",
        "@com_github_oklog_ulid//:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//pkg/timestamp:go_default_library",
    ],
)
