load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "promclient",
    srcs = ["promclient.go"],
    importpath = "github.com/thanos-io/thanos/pkg/promclient",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/exemplars/exemplarspb",
        "//pkg/metadata/metadatapb",
        "//pkg/rules/rulespb",
        "//pkg/runutil",
        "//pkg/store/storepb",
        "//pkg/targets/targetspb",
        "//pkg/tracing",
        "@com_github_go_kit_kit//log",
        "@com_github_go_kit_kit//log/level",
        "@com_github_gogo_status//:status",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//config",
        "@com_github_prometheus_prometheus//pkg/labels",
        "@com_github_prometheus_prometheus//pkg/timestamp",
        "@com_github_prometheus_prometheus//promql",
        "@com_github_prometheus_prometheus//promql/parser",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_golang_google_grpc//codes",
    ],
)

go_test(
    name = "promclient_test",
    srcs = ["promclient_e2e_test.go"],
    embed = [":promclient"],
    deps = [
        "//pkg/block/metadata",
        "//pkg/runutil",
        "//pkg/testutil",
        "//pkg/testutil/e2eutil",
        "@com_github_oklog_ulid//:ulid",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//pkg/labels",
        "@com_github_prometheus_prometheus//pkg/timestamp",
    ],
)
