load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "query",
    srcs = [
        "config.go",
        "iter.go",
        "querier.go",
        "storeset.go",
        "test.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/query",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/compact/downsample",
        "//pkg/component",
        "//pkg/dedup",
        "//pkg/exemplars/exemplarspb",
        "//pkg/extprom",
        "//pkg/gate",
        "//pkg/http",
        "//pkg/metadata/metadatapb",
        "//pkg/rules/rulespb",
        "//pkg/runutil",
        "//pkg/store",
        "//pkg/store/labelpb",
        "//pkg/store/storepb",
        "//pkg/targets/targetspb",
        "//pkg/testutil",
        "//pkg/tracing",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_prometheus//pkg/gate:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//pkg/timestamp:go_default_library",
        "@com_github_prometheus_prometheus//promql:go_default_library",
        "@com_github_prometheus_prometheus//promql/parser:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/chunkenc:go_default_library",
        "@com_github_prometheus_prometheus//util/teststorage:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "query_test",
    srcs = [
        "config_test.go",
        "querier_test.go",
        "query_bench_test.go",
        "query_test.go",
        "storeset_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":query"],
    deps = [
        "//pkg/component",
        "//pkg/gate",
        "//pkg/http",
        "//pkg/store",
        "//pkg/store/labelpb",
        "//pkg/store/storepb",
        "//pkg/store/storepb/testutil",
        "//pkg/testutil",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_prometheus//pkg/gate:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//pkg/timestamp:go_default_library",
        "@com_github_prometheus_prometheus//pkg/value:go_default_library",
        "@com_github_prometheus_prometheus//promql:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/chunkenc:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
