load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "query",
    srcs = [
        "config.go",
        "iter.go",
        "querier.go",
        "storeset.go",
        "test.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/query",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/compact/downsample",
        "//pkg/component",
        "//pkg/dedup",
        "//pkg/exemplars/exemplarspb",
        "//pkg/extprom",
        "//pkg/gate",
        "//pkg/http",
        "//pkg/metadata/metadatapb",
        "//pkg/rules/rulespb",
        "//pkg/runutil",
        "//pkg/store",
        "//pkg/store/labelpb",
        "//pkg/store/storepb",
        "//pkg/targets/targetspb",
        "//pkg/testutil",
        "//pkg/tracing",
        "@com_github_go_kit_kit//log",
        "@com_github_go_kit_kit//log/level",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//pkg/gate",
        "@com_github_prometheus_prometheus//pkg/labels",
        "@com_github_prometheus_prometheus//pkg/timestamp",
        "@com_github_prometheus_prometheus//promql",
        "@com_github_prometheus_prometheus//promql/parser",
        "@com_github_prometheus_prometheus//storage",
        "@com_github_prometheus_prometheus//tsdb/chunkenc",
        "@com_github_prometheus_prometheus//util/teststorage",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "query_test",
    srcs = [
        "config_test.go",
        "querier_test.go",
        "query_bench_test.go",
        "query_test.go",
        "storeset_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":query"],
    deps = [
        "//pkg/component",
        "//pkg/gate",
        "//pkg/http",
        "//pkg/store",
        "//pkg/store/labelpb",
        "//pkg/store/storepb",
        "//pkg/store/storepb/testutil",
        "//pkg/testutil",
        "@com_github_go_kit_kit//log",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//pkg/gate",
        "@com_github_prometheus_prometheus//pkg/labels",
        "@com_github_prometheus_prometheus//pkg/timestamp",
        "@com_github_prometheus_prometheus//pkg/value",
        "@com_github_prometheus_prometheus//promql",
        "@com_github_prometheus_prometheus//storage",
        "@com_github_prometheus_prometheus//tsdb/chunkenc",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
