load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "receive",
    srcs = [
        "config.go",
        "handler.go",
        "hashring.go",
        "multitsdb.go",
        "writer.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/receive",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/block/metadata",
        "//pkg/component",
        "//pkg/errutil",
        "//pkg/exemplars",
        "//pkg/extprom/http",
        "//pkg/objstore",
        "//pkg/runutil",
        "//pkg/server/http/middleware",
        "//pkg/shipper",
        "//pkg/store",
        "//pkg/store/labelpb",
        "//pkg/store/storepb",
        "//pkg/store/storepb/prompb",
        "//pkg/tracing",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_jpillora_backoff//:go_default_library",
        "@com_github_klauspost_compress//s2:go_default_library",
        "@com_github_mwitkow_go_conntrack//:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_common//route:go_default_library",
        "@com_github_prometheus_prometheus//pkg/exemplar:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@com_github_prometheus_prometheus//tsdb:go_default_library",
        "@in_gopkg_fsnotify_v1//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
        "@org_uber_go_atomic//:go_default_library",
    ],
)

go_test(
    name = "receive_test",
    srcs = [
        "config_test.go",
        "handler_test.go",
        "hashring_test.go",
        "multitsdb_test.go",
        "receive_test.go",
        "writer_test.go",
    ],
    embed = [":receive"],
    deps = [
        "//pkg/block/metadata",
        "//pkg/errutil",
        "//pkg/exemplars/exemplarspb",
        "//pkg/runutil",
        "//pkg/store/labelpb",
        "//pkg/store/storepb",
        "//pkg/store/storepb/prompb",
        "//pkg/testutil",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
        "@com_github_golang_snappy//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_prometheus//pkg/exemplar:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@com_github_prometheus_prometheus//tsdb:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)
