load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "receive",
    srcs = [
        "config.go",
        "handler.go",
        "hashring.go",
        "multitsdb.go",
        "writer.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/receive",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/block/metadata",
        "//pkg/component",
        "//pkg/errutil",
        "//pkg/exemplars",
        "//pkg/extprom/http",
        "//pkg/objstore",
        "//pkg/runutil",
        "//pkg/server/http/middleware",
        "//pkg/shipper",
        "//pkg/store",
        "//pkg/store/labelpb",
        "//pkg/store/storepb",
        "//pkg/store/storepb/prompb",
        "//pkg/tracing",
        "@com_github_go_kit_kit//log",
        "@com_github_go_kit_kit//log/level",
        "@com_github_gogo_protobuf//proto",
        "@com_github_jpillora_backoff//:backoff",
        "@com_github_klauspost_compress//s2",
        "@com_github_mwitkow_go_conntrack//:go-conntrack",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//route",
        "@com_github_prometheus_prometheus//pkg/exemplar",
        "@com_github_prometheus_prometheus//pkg/labels",
        "@com_github_prometheus_prometheus//storage",
        "@com_github_prometheus_prometheus//tsdb",
        "@in_gopkg_fsnotify_v1//:fsnotify_v1",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_atomic//:atomic",
    ],
)

go_test(
    name = "receive_test",
    srcs = [
        "config_test.go",
        "handler_test.go",
        "hashring_test.go",
        "multitsdb_test.go",
        "receive_test.go",
        "writer_test.go",
    ],
    embed = [":receive"],
    deps = [
        "//pkg/block/metadata",
        "//pkg/errutil",
        "//pkg/exemplars/exemplarspb",
        "//pkg/runutil",
        "//pkg/store/labelpb",
        "//pkg/store/storepb",
        "//pkg/store/storepb/prompb",
        "//pkg/testutil",
        "@com_github_go_kit_kit//log",
        "@com_github_gogo_protobuf//proto",
        "@com_github_gogo_protobuf//types",
        "@com_github_golang_snappy//:snappy",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_prometheus//pkg/exemplar",
        "@com_github_prometheus_prometheus//pkg/labels",
        "@com_github_prometheus_prometheus//storage",
        "@com_github_prometheus_prometheus//tsdb",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//errgroup",
    ],
)
