load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "reloader",
    srcs = ["reloader.go"],
    importpath = "github.com/thanos-io/thanos/pkg/reloader",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/runutil",
        "@com_github_fsnotify_fsnotify//:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
    ],
)

go_test(
    name = "reloader_test",
    srcs = [
        "example_test.go",
        "reloader_test.go",
    ],
    embed = [":reloader"],
    deps = [
        "//pkg/testutil",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/testutil:go_default_library",
        "@org_uber_go_atomic//:go_default_library",
        "@org_uber_go_goleak//:go_default_library",
    ],
)
