load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "reloader",
    srcs = ["reloader.go"],
    importpath = "github.com/thanos-io/thanos/pkg/reloader",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/runutil",
        "@com_github_fsnotify_fsnotify//:fsnotify",
        "@com_github_go_kit_kit//log",
        "@com_github_go_kit_kit//log/level",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
    ],
)

go_test(
    name = "reloader_test",
    srcs = [
        "example_test.go",
        "reloader_test.go",
    ],
    embed = [":reloader"],
    deps = [
        "//pkg/testutil",
        "@com_github_go_kit_kit//log",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/testutil",
        "@org_uber_go_atomic//:atomic",
        "@org_uber_go_goleak//:goleak",
    ],
)
