load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "replicate",
    srcs = [
        "replicator.go",
        "scheme.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/replicate",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/block",
        "//pkg/block/metadata",
        "//pkg/compact",
        "//pkg/component",
        "//pkg/extprom",
        "//pkg/model",
        "//pkg/objstore",
        "//pkg/objstore/client",
        "//pkg/prober",
        "//pkg/runutil",
        "//pkg/server/http",
        "@com_github_efficientgo_tools_extkingpin//:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_oklog_run//:go_default_library",
        "@com_github_oklog_ulid//:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
    ],
)

go_test(
    name = "replicate_test",
    srcs = ["scheme_test.go"],
    embed = [":replicate"],
    deps = [
        "//pkg/block",
        "//pkg/block/metadata",
        "//pkg/compact",
        "//pkg/objstore",
        "//pkg/testutil",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_oklog_ulid//:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//tsdb:go_default_library",
    ],
)
