load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "replicate",
    srcs = [
        "replicator.go",
        "scheme.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/replicate",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/block",
        "//pkg/block/metadata",
        "//pkg/compact",
        "//pkg/component",
        "//pkg/extprom",
        "//pkg/model",
        "//pkg/objstore",
        "//pkg/objstore/client",
        "//pkg/prober",
        "//pkg/runutil",
        "//pkg/server/http",
        "@com_github_efficientgo_tools_extkingpin//:extkingpin",
        "@com_github_go_kit_kit//log",
        "@com_github_go_kit_kit//log/level",
        "@com_github_oklog_run//:run",
        "@com_github_oklog_ulid//:ulid",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_prometheus//pkg/labels",
    ],
)

go_test(
    name = "replicate_test",
    srcs = ["scheme_test.go"],
    embed = [":replicate"],
    deps = [
        "//pkg/block",
        "//pkg/block/metadata",
        "//pkg/compact",
        "//pkg/objstore",
        "//pkg/testutil",
        "@com_github_go_kit_kit//log",
        "@com_github_go_kit_kit//log/level",
        "@com_github_oklog_ulid//:ulid",
        "@com_github_prometheus_prometheus//pkg/labels",
        "@com_github_prometheus_prometheus//tsdb",
    ],
)
