load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rules",
    srcs = [
        "manager.go",
        "prometheus.go",
        "proxy.go",
        "rules.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/rules",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/errutil",
        "//pkg/extprom",
        "//pkg/promclient",
        "//pkg/rules/rulespb",
        "//pkg/store/labelpb",
        "//pkg/store/storepb",
        "//pkg/tracing",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//pkg/rulefmt:go_default_library",
        "@com_github_prometheus_prometheus//rules:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@in_gopkg_yaml_v3//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_test(
    name = "rules_test",
    srcs = [
        "manager_test.go",
        "prometheus_test.go",
        "proxy_test.go",
        "rules_test.go",
    ],
    embed = [":rules"],
    deps = [
        "//pkg/extprom",
        "//pkg/promclient",
        "//pkg/rules/rulespb",
        "//pkg/store/labelpb",
        "//pkg/store/storepb",
        "//pkg/testutil",
        "//pkg/testutil/e2eutil",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_prometheus//pkg/exemplar:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//promql:go_default_library",
        "@com_github_prometheus_prometheus//rules:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@in_gopkg_yaml_v3//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
